<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:padding="5dp"
        android:background="@drawable/profilepicstyle"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/toolbar"/>



    <EditText
        android:id="@+id/edit_name"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/text_email"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/name_profile"
        android:textColor="?attr/textcolor"
        android:inputType="textPersonName"
        android:textColorHint="?attr/textcolor"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_surname"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edit_name"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/surname_profile"
        android:inputType="textPersonName"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/textcolor"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_country"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edit_surname"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/country_profile"
        android:inputType="textPersonName"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/textcolor"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_pic"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/email_profile"
        android:textColor="?attr/textcolor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_profile_advice"
        android:layout_marginLeft="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="50dp"
        android:text="@string/text_profile_advice"
        android:textColor="?attr/textcolor"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@id/edit_country"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/buttonstyle"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:text="@string/button_save"
        android:textColor="?attr/textcolor"
        android:textSize="14sp" />


</RelativeLayout>