<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/title_main_activity"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/titlestyle"
        android:fontFamily="@font/banco"
        android:lineSpacingExtra="2sp"
        android:text="@string/title_activity_main"
        android:textColor="?attr/textcolor"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_below="@+id/title_main_activity"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittextstyle"
        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
        android:ems="10"
        android:hint="@string/login_activity_login"
        android:inputType="textPersonName"
        android:textColorHint="?attr/textcolor"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/password"
        android:background="@drawable/edittextstyle"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:onClick="onClick"
        android:textColorHint="?attr/textcolor"
        android:hint="@string/password_activity_login"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/password_repeat"
        android:background="@drawable/edittextstyle"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:onClick="onClick"
        android:textColor="?attr/textcolor"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:textColorHint="?attr/textcolor"
        android:hint="@string/password_repeat"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
        android:textSize="16sp" />


    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/password_repeat"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonstyle"
        android:onClick="onClick"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:text="@string/button_doregister"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/text_choice"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_register"
        android:layout_marginTop="15dp"
        android:text="@string/button_choice"
        android:textColor="?attr/textcolor"
        android:textSize="14sp" />


    <Button
        android:id="@+id/button_withoutregister"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@id/text_choice"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonstyle"
        android:onClick="onClick"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:text="@string/button_withoutregister"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/ic_password_eye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_marginLeft="7dp"

        android:layout_marginTop="35dp"
        android:layout_toRightOf="@+id/password"
        app:srcCompat="@drawable/ic_closed_eye_black"/>

    <ImageView
        android:id="@+id/ic_password_repeat_eye"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="35dp"
        android:layout_toRightOf="@+id/password"

        app:srcCompat="@drawable/ic_closed_eye_black" />

</RelativeLayout>