<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/Main">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />


    <TextView
        android:id="@+id/title_main_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/titlestyle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:lineSpacingExtra="2sp"
        android:fontFamily="@font/banco"
        android:text="@string/title_activity_main"
        android:textColor="?attr/textcolor"
        android:textSize="35sp"
         />

    <Button
        android:id="@+id/button_activity_main_encyclopedia"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/title_main_activity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/main_ency_title"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:textSize="19sp"
        android:background="@drawable/buttonstyle"
        android:onClick="onClick"
         />

    <Button
        android:id="@+id/button_activity_main_gameofskate"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/button_activity_main_encyclopedia"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:textSize="19sp"
        android:text="@string/main_game_of_skate_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/buttonstyle"
        android:onClick="onClick"
         />

    <Button
        android:id="@+id/button_activity_main_yourprogress"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:textSize="19sp"
        android:text="@string/main_your_progress_title"
        android:layout_below="@+id/button_activity_main_gameofskate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/buttonstyle"
        android:onClick="onClick"
         />




</RelativeLayout>